# study_cmake

./: .gitignore  CMakeLists.txt  README.md  dependencies.cmake  env.sh
blog/: README.md
doc/book/: Minimal CMake.md
packaging/: CMakeLists.txt
readme/: CMake 项目目录结构组织.md
src/: CMakeLists.txt  main.cpp
src/example/000/: CMakeLists.txt  main.cpp
src/example/header_only/: CMakeLists.txt
src/example/header_only/cmake/: pkg-config.pc.in
src/example/header_only/include/header_only/: header_only.h
src/example/header_only/open_source/: README.md
src/temp/project_structure/: README.md
src/template/simple/: CMakeLists.txt
src/template/simple/hello_header_only/: CMakeLists.txt
src/template/simple/hello_header_only/include/hello_header_only/: hello_header_only.h
src/template/simple/hello_object_lib/: CMakeLists.txt
src/template/simple/hello_object_lib/include/hello_object/: hello_object.h
src/template/simple/hello_object_lib/src/: hello_object.cpp
src/template/simple/hello_world/: CMakeLists.txt
src/template/simple/hello_world/src/: main.cpp
src/template/simple/simple_library/: CMakeLists.txt
src/template/simple/simple_library/include/hello/: hello.h
src/template/simple/simple_library/src/: internal.cpp  internal.h
src/template/simple/simple_library_shared/: CMakeLists.txt
src/template/simple/simple_library_shared/include/hello/: hello.h
src/template/simple/simple_library_static/: CMakeLists.txt
src/template/simple/simple_library_static/src/: hello.cpp
src/template/simple/src/: main.cpp
